# erga_main

./: a.txt  all_boot.bash  all_boot.bash_old  all_boot.yolov5.bash  erga設定でのplanning_simulatorの起動コマンド  l-sim_boot.bash  l-sim_boot.yolov5.bash  l-sim_boot2.bash  p-sim_boot.bash  traffic_light_gui.bash
original_nodes/ROS2 Autoware FMS Packages/autoware_fms_msgs/: CMakeLists.txt  package.xml
original_nodes/ROS2 Autoware FMS Packages/autoware_fms_msgs/msg/: Place.msg  PlaceArray.msg  Schedule.msg  Task.msg
original_nodes/all_traffic_light_signals_publisher/all_traffic_light_signals_publisher/: CMakeLists.txt  package.xml
original_nodes/all_traffic_light_signals_publisher/all_traffic_light_signals_publisher/src/: all_traffic_light_signals_publisher.cpp
original_nodes/auto_permission/auto_permission/: CMakeLists.txt  package.xml
original_nodes/auto_permission/auto_permission/config/: auto_permission.param.yaml
original_nodes/auto_permission/auto_permission/launch/: auto_permission.launch (コピー).py  auto_permission.launch.py  auto_permission.launch.xml
original_nodes/auto_permission/auto_permission/src/: auto_permission.cpp
original_nodes/autoware_control_cmd_mqtt_send/: CMakeLists.txt  package.xml
original_nodes/autoware_control_cmd_mqtt_send/config/: mqtt.param.yaml
original_nodes/autoware_control_cmd_mqtt_send/src/: autoware_control_cmd_mqtt_send.cpp
original_nodes/can_mqtt_sub/: CMakeLists.txt  package.xml
original_nodes/can_mqtt_sub/src/: can_mqtt_sub_core.cpp
original_nodes/car_auto_operation/: CMakeLists.txt  package.xml  publishするトピック
original_nodes/car_auto_operation/config/: aaa.param.yaml  aaa20210103.param.yaml
original_nodes/car_auto_operation/launch/: car_auto_operation.launch.py  car_auto_operation_20210103.launch.py
original_nodes/car_auto_operation/src/: car_auto_operation_steer.cpp  car_auto_operation_steer_20210103.cpp
original_nodes/center_point_mqtt_pub/: CMakeLists.txt  package.xml
original_nodes/center_point_mqtt_pub/src/: center_point_mqtt_pub_core.cpp
original_nodes/contec/contec_dio/: CMakeLists.txt  package.xml
original_nodes/detect_fusion/detect_fusion/: CMakeLists.txt  package.xml
original_nodes/detect_fusion/detect_fusion_msgs/: CMakeLists.txt  package.xml
original_nodes/gmps_driver/ekf_aichi_localizer/: CMakeLists.txt  README.md  package.xml
original_nodes/gnss_pose_mqtt_sub/: CMakeLists.txt  package.xml
original_nodes/gnss_pose_mqtt_sub/src/: gnss_pose_mqtt_sub.cpp
original_nodes/math_slip_angle/: CMakeLists.txt  package.xml
original_nodes/math_slip_angle/launch/: math_slip_angle.launch.xml
original_nodes/math_slip_angle/src/: math_slip_angle.cpp
original_nodes/mgrs2latlon/: CMakeLists.txt  package.xml
original_nodes/mgrs2latlon/src/: mgrs2latlon.cpp  mgrs2latlon_orig.cpp
original_nodes/mgrs_gcs_converter/: CMakeLists.txt  README.md  package.xml
original_nodes/mgrs_gcs_converter/launch/: convert_autoware.launch.xml
original_nodes/mgrs_gcs_converter/src/: conversion_node.cpp
original_nodes/mqtt_pub/: CMakeLists.txt  package.xml
original_nodes/mqtt_pub/src/: mqtt_pub_core.cpp
original_nodes/novatel_oem7_driver/: CMakeLists.txt  package.xml
original_nodes/novatel_oem7_driver/launch/: novatel_oem7_driver.launch.xml  novatel_oem7_driver_erga.launch.xml  novatel_oem7_driver_erga_tcp.launch.xml  novatel_oem7_driver_erga_udp.launch.xml  novatel_oem7_driver_liesse.launch.xml  novatel_oem7_driver_liesse_tcp.launch.xml  novatel_oem7_driver_rainbow.launch.xml  novatel_oem7_driver_rainbow_tcp.launch.xml  novatel_oem7_driver_rainbow_tcp_single.launch.xml  novatel_oem7_driver_rainbow_udp.launch.xml  novatel_sentence_to_navsatfix.launch.xml
original_nodes/novatel_oem7_driver/src/: novatel_oem7_driver.cpp  novatel_oem7_driver.original.cpp  novatel_oem7_driver_tcp.cpp  novatel_oem7_udp_sub.cpp  novatel_sentence_to_navsatfix.cpp
original_nodes/odometry_mqtt_sub/: CMakeLists.txt  package.xml
original_nodes/odometry_mqtt_sub/src/: odometry_mqtt_sub.cpp
original_nodes/pose_twist_to_baselink/: CMakeLists.txt  package.xml
original_nodes/pose_twist_to_baselink/launch/: pose_twist_to_baselink.launch.xml
original_nodes/pose_twist_to_baselink/src/: pose_twist_to_baselink.cpp  pose_twist_to_baselink_sync.cpp
original_nodes/pose_udp_pub/: CMakeLists.txt  package.xml
original_nodes/pose_udp_pub/launch/: pose_udp_pub.launch.xml
original_nodes/pose_udp_pub/src/: pose_udp_pub.cpp  pose_udp_pub_old.cpp
original_nodes/report_selector/: CMakeLists.txt  package.xml
original_nodes/report_selector/config/: erga.param.yaml  rainbow.param.yaml
original_nodes/report_selector/launch/: report_selector_rainbow.launch.xml  velocity_report_selector.launch.xml
original_nodes/report_selector/src/: report_selector.cpp  velocity_report_selector.cpp
original_nodes/report_selector_msgs/: CMakeLists.txt  package.xml
original_nodes/report_selector_msgs/msg/: ReportSelect.msg
original_nodes/tf_catch/: CMakeLists.txt  package.xml
original_nodes/tf_catch/src/: tf_catch.cpp
original_nodes/tokairika_mqtt/: CMakeLists.txt  package.xml
original_nodes/tokairika_mqtt/config/: mgrs.param.yaml
original_nodes/tokairika_mqtt/launch/: tokairika_mqtt_mgrs.launch.xml  tokairika_mqtt_plane.launch.xml
original_nodes/tokairika_mqtt/src/: tokairika_mqtt_pub_mgrs.cpp  tokairika_mqtt_pub_plane.cpp  tokairika_mqtt_sub.cpp
original_nodes/transform_center_velocity/: CMakeLists.txt  package.xml
original_nodes/transform_center_velocity/config/: erga.param.yaml
original_nodes/transform_center_velocity/launch/: transform_center_velocity_erga.launch.py
original_nodes/transform_center_velocity/src/: transform_center_velocity.cpp
original_nodes/vehicle_status_mqtt_sub/: CMakeLists.txt  package.xml
original_nodes/vehicle_status_mqtt_sub/src/: vehicle_status_mqtt_sub.cpp
original_nodes/wada_vmc_udp_sub/: CMakeLists.txt  package.xml
original_nodes/wada_vmc_udp_sub/launch/: wada_vmc_udp_sub.launch.xml
original_nodes/wada_vmc_udp_sub/src/: wada_vmc_udp_sub.cpp  wada_vmc_udp_sub_20221111.cpp
(+585 files in other folders)
