<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>novatel_oem7_driver</name>
  <version>0.0.1</version>
  <description>novatel sentence --> navsat</description>
  <maintainer email="sai.hideyasu@sit.ac.jp">sit</maintainer>
  <maintainer email="annie@mechanopixel.xyz">MechanoPixel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>autoware_sensing_msgs</depend>
  <depend>orig_system_msgs</depend>
  <depend>tf2</depend>
  <depend>autoware_auto_vehicle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
