<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>contec_dio</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sit@todo.todo">sit</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>wada_vmc_msgs</depend>
  <depend>auto_permission_msgs</depend>
  <depend>autoware_adapi_v1_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
